Format OSM debug URL independently of locale